--- a/sakila-business-webapi/src/main/resources/static/ActorManagement.html
+++ b/sakila-business-webapi/src/main/resources/static/ActorManagement.html
@@ -92,8 +92,8 @@
                 </div>
             </div>
         </div>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.js"></script>
+  <!--   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.js"></script>  --> 
         <script src="js/app.js"></script>
-        <script src="js/service/actor_service.js"></script> <script src="js/controller/actor_controller.js "></script>
+   <!--       <script src="js/service/actor_service.js"></script> <script src="js/controller/actor_controller.js "></script>  -->
     </body>
 </html>
