--- a/sakila-business-webapi/src/main/resources/static/CustomerManagement.html
+++ b/sakila-business-webapi/src/main/resources/static/CustomerManagement.html
@@ -146,7 +146,7 @@
                 </div>
             </div>
         </div>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.js"></script>
+ <!--       <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.js"></script>   --> 
         <script src="js/app.js"></script>
         <script src="js/service/customer_service.js"></script> <script src="js/controller/customer_controller.js "></script>
     </body>
